2011-08-28  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110828
	  Merge with NetBSD make, pick up
	  o silent=yes in .MAKE.MODE causes meta mode to mark targets 
	    as SILENT if a .meta file is created

2011-08-18  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110818
	  Merge with NetBSD make, pick up
	  o in meta mode, if target flagged .META a missing .meta file
	    means target is out-of-date
	  o fixes for gcc 4.5 warnings
	  o simplify job printing code
	
2011-08-09  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110808
	  Merge with NetBSD make, pick up
	  o do not touch OP_SPECIAL targets when doing make -t
	
2011-06-22  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110622
	  Merge with NetBSD make, pick up
	  o meta_oodate detect corrupted .meta file and declare oodate.
	* configure.in: add check for setsid
	
2011-06-07  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Merge with NetBSD make, pick up
	  o unit-tests/modts now works on MirBSD

2011-06-04  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110606
	  Merge with NetBSD make, pick up
	  o ApplyModifiers: when we parse a variable which is not
	    the entire modifier string, or not followed by ':', do not
	    consider it as containing modifiers.
	  o loadfile: ensure newline at end of mapped file.

2011-05-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110505
	  Merge with NetBSD make, pick up
	  o .MAKE.META.BAILIWICK - list of prefixes which define the scope
	    of make's control.  In meta mode, any generated file within
	    said bailiwick, which  is found to be missing, causes current
	    target to be out-of-date. 
	
2011-04-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110411